# project_atlas

./: README.md  pyproject.toml  requirements.txt
archive/: README.md
archive/project/: README.md  pyproject.toml
archive/project/src/: console.py
archive/project/src/agent/: dagger.py  memory.py  policy.py  skill_registry.py  trainer.py  world_model.py
archive/project/src/core/: timebase.py
archive/project/src/env/: rules.py  tools.py  world_gen.py
archive/project/src/human/: input_keyboard.py
archive/project/src/logging/: db.py  schema.py
archive/project/src/openai_io/: llm.py
archive/project/src/render/: anchors.py  ui_overlays.py
configs/: default.yaml
project/: README.md
project/configs/: default.yaml
project/src/: config.py  main.py
src/: config.py  console.py  main.py
src/agent/: action_masking.py  atlas_messages.py  dagger.py  imitation.py  memory.py  offline_rl.py  policy.py  preference_reward.py  replay_buffer.py  skill_registry.py  trainer.py  world_model.py
src/core/: events.py  rng.py  timebase.py  types.py
src/env/: curriculum.py  encoding.py  grid_env.py  modes.py  rewards.py  (+3 more)
tests/: test_chat_ui_actions.py  test_ctf_mode.py  test_curriculum_pipeline.py  test_dagger_query_gate.py  test_eval_harness.py  test_exitgame_solvable.py  test_fly_items_and_islands.py  test_goal_stack.py  test_hide_seek_mode.py  test_imitation_bc.py  test_offline_rl.py  test_preference_reward.py  test_preference_term_in_reward.py  test_progression.py  test_replay_buffer.py  test_runtime_inference.py  test_sprite_db.py  test_tool_safety_guardrails.py
(+37 files in other folders)
