[project]
name = "atlas"
version = "0.1.0"
description = "Atlas, Adaptive Thought & Learning Autonomous System (A.T.L.A.S.)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atlas Team" }]
dependencies = [
  "numpy>=1.26",
  "pygame>=2.5",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "gymnasium>=0.29",
  "torch>=2.2",
  "stable-baselines3>=2.3",
  "sb3-contrib>=2.3",
  "sqlalchemy>=2.0",
  "networkx>=3.2",
  "pyyaml>=6.0",
  "openai>=1.30",
]

[project.scripts]
atlas = "src.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
